# 08_timus

./: .travis.yml  CMakeLists.txt  main.cpp  readme.md  test_main.cpp
Tasks/: CMakeLists.txt  current_task.h.in
Tasks/1196/: 1196.cpp  readme.md
Tasks/1496/: 1496.cpp  out1.txt  readme.md
Tasks/1545/: 1545.cpp  out1.txt  readme.md
Tasks/1837/: 1837.cpp  readme.md
